fixed sponsor overlap

--- a/src/pages/Sponsors/Sponsors.scss
+++ b/src/pages/Sponsors/Sponsors.scss
@@ -81,11 +81,13 @@
           display: flex;
           flex-direction: column;
           width: 50%;
+          max-width: calc(15vh + 15vw);
           .fdbev-spons {
-            max-width: calc(15vh + 15vw);
-            margin-bottom: 20px;
+            // max-width: calc(8vh + 8vw);
+            // margin-bottom: 20px;
             padding-right: 20px;
             padding-left: 20px;
+            // margin: 20px;
           }
         }
       }
